--- a/day6/style.css
+++ b/day6/style.css
@@ -1,1 +1,74 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+.container {
+  background-color: #17a2b8;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container .alert {
+  color: #17a2b8;
+  padding: 15px 40px;
+  font-size: 40px;
+  font-weight: 500;
+  background: #fff;
+  border-radius: 12px;
+}
+.container .alert.hide {
+  display: none;
+}
+.container .box .result {
+  font-size: 60px;
+  font-weight: 700;
+  color: #fff;
+  border-radius: 50%;
+  padding: 70px;
+  border: 6px solid #fff;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin: auto;
+}
+.container .box .detail {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 50px;
+}
+.container .box .detail .value {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 20px;
+}
+.container .box .detail .value .header {
+  border-top-left-radius: 14px;
+  border-top-right-radius: 14px;
+  display: flex;
+  justify-content: center;
+  background-color: #78c0c9;
+  width: 300px;
+  padding: 8px 0px;
+  margin: auto;
+  color: #fff;
+  font-size: 20px;
+}
+.container .box .detail .value .content {
+  border-bottom-right-radius: 14px;
+  border-bottom-left-radius: 14px;
+  font-size: 20px;
+  padding: 8px 0px;
+  display: flex;
+  justify-content: center;
+  background-color: #fff;
+  width: 300px;
+  text-transform: uppercase;
+}
+.container .box.hide {
+  display: none;
+}/*# sourceMappingURL=style.css.map */
