--- a/style.scss
+++ b/style.scss
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: linear-gradient(45deg, #f2bed1, #f8f6f4, #c0dbea);
+  background-image: linear-gradient(45deg,#f8f6f4, #F7FFE5, #A0C49D);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -13,17 +13,17 @@ body {
   justify-content: center;
   gap: 30px;
   .header {
-    color: #e8a0bf;
+    color: #73A9AD;
   }
   .content {
     display: flex;
     gap: 20px;
     .tooltip {
       padding: 10px 20px;
-      border: 1px solid #e8a0bf;
+      // border: 1px solid #e8a0bf;
       border-radius: 16px;
       color: #fff;
-      background-color: #e8a0bf;
+      background-color: #73A9AD;
       text-decoration: none;
       // tooltip
       position: relative;
@@ -31,7 +31,7 @@ body {
       /* Tooltip text */
       .tooltiptext {
         visibility: hidden;
-        background-color: #F2BED1;
+        background-color: #5D9C59;
         color: #fff;
         text-align: center;
         width: 120px;
@@ -51,7 +51,7 @@ body {
           margin-left: -5px;
           border-width: 5px;
           border-style: solid;
-          border-color: transparent transparent #F2BED1 transparent;
+          border-color: transparent transparent #5D9C59 transparent;
         }
       }
       /* Show the tooltip text when you mouse over the tooltip container */
