--- a/day6/style.css
+++ b/day6/style.css
@@ -24,15 +24,19 @@
   display: none;
 }
 .container .box .result {
+  border-radius: 50%;
+  border: 6px solid #fff;
+  width: 220px;
+  height: 220px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.container .box .result .result-text {
   font-size: 60px;
   font-weight: 700;
   color: #fff;
-  border-radius: 50%;
-  padding: 70px;
-  border: 6px solid #fff;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: auto;
 }
 .container .box .detail {
   display: flex;
@@ -67,7 +71,7 @@
   justify-content: center;
   background-color: #fff;
   width: 300px;
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 .container .box.hide {
   display: none;
