--- a/day6/style.scss
+++ b/day6/style.scss
@@ -24,14 +24,19 @@
   }
   .box {
     .result {
-      font-size: 60px;
-      font-weight: 700;
-      color: #fff;
       border-radius: 50%;
-      padding: 70px;
       border: 6px solid #fff;
-      width: fit-content;
+      width: 220px;
+      height: 220px;
       margin: auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .result-text {
+        font-size: 60px;
+        font-weight: 700;
+        color: #fff;
+      }
     }
     .detail {
       display: flex;
@@ -64,7 +69,7 @@
           justify-content: center;
           background-color: #fff;
           width: 300px;
-          text-transform: uppercase;
+          text-transform: capitalize;
         }
       }
     }
