--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: linear-gradient(45deg, #f2bed1, #f8f6f4, #c0dbea);
+  background-image: linear-gradient(45deg, #f8f6f4, #F7FFE5, #A0C49D);
   height: 100vh;
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@ body {
   gap: 30px;
 }
 body .header {
-  color: #e8a0bf;
+  color: #73A9AD;
 }
 body .content {
   display: flex;
@@ -22,10 +22,9 @@ body .content {
 }
 body .content .tooltip {
   padding: 10px 20px;
-  border: 1px solid #e8a0bf;
   border-radius: 16px;
   color: #fff;
-  background-color: #e8a0bf;
+  background-color: #73A9AD;
   text-decoration: none;
   position: relative;
   display: inline-block;
@@ -34,7 +33,7 @@ body .content .tooltip {
 }
 body .content .tooltip .tooltiptext {
   visibility: hidden;
-  background-color: #F2BED1;
+  background-color: #5D9C59;
   color: #fff;
   text-align: center;
   width: 120px;
@@ -54,7 +53,7 @@ body .content .tooltip .tooltiptext::after {
   margin-left: -5px;
   border-width: 5px;
   border-style: solid;
-  border-color: transparent transparent #F2BED1 transparent;
+  border-color: transparent transparent #5D9C59 transparent;
 }
 body .content .tooltip:hover .tooltiptext {
   visibility: visible;
