--- a/day7/style.scss
+++ b/day7/style.scss
@@ -12,8 +12,8 @@
   justify-content: center;
   align-items: center;
   .input {
-    position: relative;
-    top: -200px;
+    position: fixed;
+    top: 110px;
     .input-todo {
       font-size: 24px;
       padding: 10px 20px;
@@ -72,9 +72,9 @@
     border: none;
     color: #fff;
     background-color: #2aa64b;
-    position: relative;
-    top: -200px;
-    right: 70px;
+    position: fixed;
+    top: 117px;
+    right: 580px;
     &:hover {
       opacity: 0.8;
       cursor: pointer;
